# sdl2-test

./: .gitignore  CMakeLists.txt  Idle.png.pyxel  Info.plist.in  ReadME.md  config.cmake  idle.pyxel  map dev.pyxel
Resources/: AppIcon.icns  newmap.map
src/: AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
src/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  PositionComponent.h  ProjectileComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  UIButton.h  UILabel.h
src/include/: Application.h  Button.h  Layer.h  Window.h
